@@ -1,5 +1,7 @@
 # CHANGELOG
 # ---
+# * Work around required PayPal state fields for countries that don't require states [cody]
+#
 # * Add metadata to SecurePay gateway [cody]
 #
 # * Add initial support for the SecurePay gateway using the Authorize.net translator [cody]
